--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <title>Guide to Berserk</title>
   </head>
   <body>
+    <!-- <nav class="navbar" id="navbar">
+      <img src="./media/berserk-mark-of-sacrifice.png" alt="" />
+    </nav> -->
     <header class="site-header">
       <audio
         class="site-header__audio"
@@ -25,13 +28,13 @@
       <img
         class="site-header__background"
         src="./media/header-background-image.jpg"
-        alt="Guts looking up at the stars"
+        alt="A panel from the manga of the main character Guts in the bottom right corner laying on the ground, injured and looking up at the stars."
       />
       <img
         class="site-header__logo"
         id="siteHeaderLogo"
         src="./media/Berserk-logo-transparent.png"
-        alt="logo of berserk"
+        alt="The logo of berserk in the color red, first displaying the text 'ベルセルク' in Japanese, then to the bottom right of the japanese text, in a much smaller font 'Berserk' is displayed in English"
       />
       <h1 class="site-header__title" id="siteHeaderTitle">
         An unofficial guide to Berkserk.
